[package]
name = "pwhash"
version = "1.0.0"
authors = ["Ivan Nejgebauer <inejge@gmail.com>"]
description = "A collection of password hashing routines in pure Rust."
documentation = "https://inejge.github.io/pwhash"
homepage = "https://github.com/inejge/pwhash"
repository = "https://github.com/inejge/pwhash"
readme = "README.md"
license = "MIT"
keywords = ["password", "hash", "hashing", "crypt"]
categories = ["cryptography", "authentication"]
edition = "2021"

[features]
md5crypt = ["dep:md-5"]
sha1crypt = ["dep:sha-1"]
sha2crypt = ["dep:sha2"]
unix_crypt = ["md5crypt", "sha1crypt", "sha2crypt"]

[dependencies]
md-5 = { version = "0.10.1", optional = true }
sha-1 = { version = "0.9", optional = true }
sha2 = { version = "0.9", optional = true }
blowfish = { version = "0.8.0", features = ["bcrypt"] }
hmac = "0.10"
byteorder = "1"
rand = "0.8"
